<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_activity_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/panel_padding"
        android:paddingTop="@dimen/panel_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text_size_22"
            android:textColor="@color/main_activity_panel_header_title"
            android:text="@string/main_activity_panel_header_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_activity_menu_button"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/main_activity_button_search_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_activity_icon"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_22"
            android:foreground="?attr/selectableItemBackground"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/main_activity_search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/main_activity_icon"/>

        <Button
            android:id="@+id/multimediaButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_activity_menu_button"
            app:cornerRadius="@dimen/button_corner_radius"
            android:text="@string/main_activity_button_media_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_activity_icon"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_22"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/main_activity_media_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint ="@color/main_activity_icon"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_activity_menu_button"
            app:cornerRadius="@dimen/button_corner_radius"
            android:text="@string/main_activity_button_settings_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_activity_icon"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_22"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/main_activity_settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint ="@color/main_activity_icon"/>
    </LinearLayout>

</FrameLayout>