<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/arrow_back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:paddingStart="12dp"
                android:text="@string/settings_activity_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_22" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/list_item_padding_start"
            android:paddingTop="7dp"
            android:paddingEnd="@dimen/list_item_padding_end"
            android:paddingBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/settings_activity_switch"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <Switch
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:autoSizeMaxTextSize="@dimen/text_size_16"
                android:fontFamily="@font/ys_display_regular"
                android:showText="false" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/list_item_padding_start"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingEnd="@dimen/list_item_padding_end"
            android:paddingBottom="@dimen/list_item_padding_bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/settings_activity_share"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:layout_gravity="end"
                android:src="@drawable/settings_activity_social_icon" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/list_item_padding_start"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingEnd="@dimen/list_item_padding_end"
            android:paddingBottom="@dimen/list_item_padding_bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/settings_activity_support"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:layout_gravity="end"
                android:src="@drawable/settings_activity_support_icon" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/list_item_padding_start"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingEnd="@dimen/list_item_padding_end"
            android:paddingBottom="@dimen/list_item_padding_bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/settings_activity_license"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="14dp"
                android:layout_gravity="end"
                android:src="@drawable/settings_activity_license_icon" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>